AddReflection rough wireframe

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -4,7 +4,7 @@
 
 .App-header {
   background-color: #033076;
-  min-height: 70px;
+  min-height: 100px;
   padding: 20px;
   color: white;
 }
@@ -16,4 +16,30 @@
 .App-intro {
   font-size: large;
 }
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333;
+}
+
+li {
+  float: left;
+}
+
+li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+
+li a:hover {
+  background-color: #111;
+}
+
 
