--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -3,10 +3,10 @@
 }
 
 .App-header {
-  background-color: #033076;
+  background-color: white;
   min-height: 100px;
   padding: 20px;
-  color: white;
+  color: black;
 }
 
 .App-title {
@@ -22,11 +22,12 @@ ul {
   margin: 0;
   padding: 0;
   overflow: hidden;
-  background-color: #333;
+  background-color: #108aa8;
 }
 
 li {
   float: left;
+  width: 50%
 }
 
 li a {
@@ -39,7 +40,8 @@ li a {
 
 
 li a:hover {
-  background-color: #111;
+  background-color: #137d97;
 }
+
 
 
